# unp4k_rs

./: Cargo.toml  README.md
.github/workflows/: release.yml
crates/dataforge-mcp/: Cargo.toml
crates/dataforge-mcp/src/: lib.rs  server.rs  tools.rs
crates/unp4k-cli/: Cargo.toml
crates/unp4k-cli/src/: main.rs
src/: crypto.rs  cryxml.rs  error.rs  lib.rs  main.rs  p4k.rs  p4k_utils.rs  p4k_writer.rs  socpak.rs  sopack.rs  utils.rs
src/dataforge/: definitions.rs  header.rs  mod.rs  reader.rs  types.rs  utils.rs  xml.rs
