[workspace]
members = [".", "crates/unp4k-cli", "crates/dataforge-mcp"]

[package]
name = "unp4k"
version = "0.1.0"
edition = "2021"
description = "A Rust library for extracting Star Citizen p4k files"
license = "gpl-3.0"
authors = ["xkeyC"]

[lib]
name = "unp4k"
path = "src/lib.rs"

[dependencies]
# ZIP 处理
zip = "6.0.0"
# 压缩/解压
flate2 = "1.1.5"
zstd = "0.13.3"
# 加密
aes = "0.8.4"
cbc = "0.1.2"
# XML 处理
quick-xml = "0.38.4"
# 字节序处理
byteorder = "1.5.0"
# CRC32 校验
crc32fast = "1.5.0"
# SHA256 哈希
sha2 = "0.10"
# 错误处理
thiserror = "2.0.17"
anyhow = "1.0.100"
# 通配符匹配
glob = "0.3.3"
globset = "0.4.18"
# 进度条
indicatif = "0.18.3"
# 并行处理
rayon = "1.10"

[dev-dependencies]
tempfile = "3.23.0"
