[package]
name = "unp4k-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for extracting and modifying Star Citizen p4k files"
license = "MIT"
authors = ["xkeyC"]

[[bin]]
name = "unp4k"
path = "src/main.rs"

[dependencies]
# 核心库
unp4k = { path = "../.." }
# 命令行解析
clap = { version = "4.5.53", features = ["derive"] }
# 错误处理
anyhow = "1.0.100"
